[package]
name = "mineguard"
version = "0.1.0"
edition = "2024"
description = "Opinionated Minecraft server supervisor engine built primarily for RustyMine"
readme = "README.md"
homepage = "https://mineguard.h3cx.dev"
repository = "https://github.com/H3ct0r55/MineGuard"
license = "MIT"
# publish set to false during development
publish = false

[features]
default = ["core", "events", "mc-vanilla"]
# Core runtime requirements for the currently implemented functionality.
core = ["dep:thiserror", "dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
# Placeholder for upcoming event-driven functionality.
events = ["dep:uuid", "dep:chrono", "dep:regex"]

mc-vanilla = []
# Add new feature groups here; attach their optional dependencies to the relevant feature list.

[dependencies]
chrono = {version = "0.4.42", optional = true} 
regex = {version = "1.12.2", optional = true} 
thiserror = { version = "2.0.17", optional = true }
# Core async runtime and utilities
# Add new feature-specific optional dependencies alongside the relevant feature entry above.
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread", "macros", "io-std", "io-util"], optional = true }
tokio-stream = { version = "0.1.17", features = ["full", "io-util", "signal", "tokio-util"], optional = true }
tokio-util = { version = "0.7.17", features = ["full"], optional = true }
uuid = { version = "1.19.0", features = ["v4"], optional = true }
